# tweakphp

./: .SRCINFO  .gitignore  .prettierignore  .prettierrc  CONTINUE_MIGRATION.md  HANDOFF_SUMMARY.md  MIGRATION_GUIDELINES.md  MIGRATION_ISSUES.md  MIGRATION_STATUS.md  PKGBUILD  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yml  test-build.yml  update-aur-bin.yml  update-aur.yml  update-homebrew.yml
migration-to-tauri/: 00-overview.md  01-project-setup-and-dependencies.md  02-frontend-code-migration.md  03-ipc-communication-layer.md  04-file-system-operations.md  05-database-and-settings.md  06-system-features.md  07-client-connections.md  08-lsp-integration.md  09-build-configuration.md  10-testing-and-validation.md  CONTINUE_MIGRATION.md  HANDOFF_SUMMARY.md  MIGRATION_GUIDELINES.md  MIGRATION_STATUS.md  README.md  STEP10_IMPLEMENTATION.md  TESTING_CHECKLIST.md
public/: client-7.4.phar  client-8.0.phar  client-8.1.phar  client-8.2.phar  client-8.3.phar  client-8.4.phar
src/: App.vue  code-history.d.ts  editor.ts  index.html  main.ts  vite.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  settings.rs  system.rs
src-tauri/src/client/: commands.rs  docker.rs  kubectl.rs  local.rs  mod.rs  ssh.rs  traits.rs  utils.rs  vapor.rs
src-tauri/src/db/: mod.rs
src-tauri/src/lsp/: mod.rs
src-tauri/src/migrations/: 001_create_code_histories_and_tab_states_table.sql
src-tauri/src/tools/: code_history.rs  mod.rs
(+108 files in other folders)
